31785.home.product.748 fix margin-right for subtitle on tablet

--- a/src/components/Product/style.scss
+++ b/src/components/Product/style.scss
@@ -349,8 +349,8 @@
 
             &--relative-top-bottom {
                 position: absolute;
-                bottom: 22px;
-                right: 26px;
+                bottom: 24px;
+                right: 0;
                 padding: 0;
                 width: 80%;
                 color: $cl-white;
